Kubernetes /AdministrativeFiles/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-traffic
  namespace: app-namespace 
spec:
  podSelector:
    matchLabels:
      app: web-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: allowed 
        - podSelector:
            matchLabels:
              role: frontend
  egress: 
    - to:
        - namespaceSelector:
            matchLabels:
              access: allowed
        - podSelector: 
           L
